Fix SemanticUI BODY style on overflow-x that causes RAC popover to jump to the top of the screen.

--- a/packages/volto-light-theme/src/theme/_layout.scss
+++ b/packages/volto-light-theme/src/theme/_layout.scss
@@ -60,6 +60,10 @@
   z-index: $zindex;
 }
 
+body {
+  overflow-x: initial;
+}
+
 // We expect initially three main containers
 .header-wrapper {
   .q.container,
